--- a/WebContent/ch02_display/03_mainPage.html
+++ b/WebContent/ch02_display/03_mainPage.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- 반응형웹을 위해 width 크기 지정 -->
+
 <title>Insert title here</title>
 
 <link rel="stylesheet" href="mainPage.css">
@@ -10,8 +12,8 @@
 <body>
 	<div id="container">
 		<div id="header">Header</div>
-		<div id="side">Side</div>
-		<div id="contents">Contents</div>
+		<div id="side" class="customDisplay">Side</div>
+		<div id="contents" class="customDisplay">Contents</div>
 		<div id="footer">Footer</div>
 	</div>
 </body>
